objects/Sales_Process_Linkage__c.object
<CustomObject>
    <fields>
        <fullName>ID_Type__c</fullName>
        <label>ID Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Registration #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eclipse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Opportunity ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRIS config ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed BG Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnlinePriceBook ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreSalesSupport - RMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quicksilver DealONE Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartquote ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBS Code</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Quote_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>IF( ISPICKVAL(ID_Type__c , &apos;Order Number&apos;),HYPERLINK(&quot;javascript:alert(&apos;&quot;+$Label.OSS_InfoMsg+&quot;&apos;);javascript:var obj = window.open(&apos;&quot;+$Label.OSS_URL+&quot;os=&quot;+ID__c+&quot;&apos;)&quot;,ID__c ,&quot;_top&quot;), ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_SalesLinkage_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique SalesLinkage ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sales Process Linkage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{000000000}</displayFormat>
        <label>Quote ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Process Linkage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>